CMBSandbox4/src/objects/Invoice_Line_Item_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Item Summary</relationshipLabel>
        <relationshipName>Invoice_Line_Item_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Line Item Summary</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Invoice Line Item Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Item Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>